--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name — Photonics / Optics</title>
+  <title>Varun Ramaprasad</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,11 +11,11 @@
     <h1>Your Name</h1>
     <p class="tagline">Photonics / Optics • Metasurfaces • Nonlinear optics • Computational EM</p>
     <p class="links">
-      <a href="mailto:you@email.com">Email</a>
+      <a href="vramaprasad@ucsd.edu">Email</a>
       <span>·</span>
-      <a href="https://www.linkedin.com/in/your-handle/">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/varun-ramaprasad/">LinkedIn</a>
       <span>·</span>
-      <a href="https://github.com/your-username">GitHub</a>
+      <a href="https://github.com/varun-ramaprasad">GitHub</a>
       <span>·</span>
       <a href="assets/Resume.pdf">Resume (PDF)</a>
     </p>
