--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="wrap">
-    <h1>Your Name</h1>
+    <h1>Varun Ramaprasad</h1>
     <p class="tagline">Photonics / Optics • Metasurfaces • Nonlinear optics • Computational EM</p>
     <p class="links">
       <a href="vramaprasad@ucsd.edu">Email</a>
