--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Varun Ramaprasad</h1>
     <p class="tagline">Photonics / Optics • Metasurfaces • Nonlinear optics • Computational EM</p>
     <p class="links">
-      <a href="vramaprasad@ucsd.edu">Email</a>
+      <a href="mailto:vramaprasad@ucsd.edu">Email</a>
       <span>·</span>
       <a href="https://www.linkedin.com/in/varun-ramaprasad/">LinkedIn</a>
       <span>·</span>
