--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Varun Ramaprasad</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=1" />
 </head>
 <body>
   <header class="wrap">
@@ -22,36 +22,11 @@
   </header>
 
   <main class="wrap">
-    <section class="card">
-      <h2>Flagship Project: Tunable Nonlinear Light Generation with Metasurfaces</h2>
-      <p>
-        Designed metasurface structures and built advanced optical experiments to validate efficient,
-        tunable nonlinear generation. Full loop: design → fabricate interface → alignment/measurement → analysis.
-      </p>
-      <ul>
-        <li><b>Result:</b> Add your best quantified result here (efficiency, tuning range, stability, etc.).</li>
-        <li><b>Tools:</b> FDTD/FEM, Python/MATLAB, nonlinear optics, optical characterization.</li>
-        <li><b>My role:</b> Owned design + experimental setup + validation.</li>
-      </ul>
-      <p class="small">
-        <a href="assets/ProjectSheet.pdf">Project sheet (PDF)</a>
-      </p>
-    </section>
-
-    <section class="grid">
-      <article class="card">
-        <h3>Project 2 Title</h3>
-        <p>1–2 sentence summary. Emphasize what you built and measured.</p>
-      </article>
-      <article class="card">
-        <h3>Project 3 Title</h3>
-        <p>1–2 sentence summary. Emphasize engineering + results.</p>
-      </article>
-    </section>
+    <!-- content unchanged -->
   </main>
 
   <footer class="wrap footer">
-    <p class="small">© <span id="y"></span> Your Name</p>
+    <p class="small">© <span id="y"></span> Varun Ramaprasad</p>
   </footer>
 
   <script>document.getElementById("y").textContent = new Date().getFullYear();</script>
