--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="wrap">
     <h1>Varun Ramaprasad</h1>
-    <p class="tagline">Photonics / Optics • Metasurfaces • Nonlinear optics • Computational EM</p>
+    <p class="tagline">Photonics / Optics • Metasurfaces • Nonlinear optics • Quantum materials • Computational EM</p>
     <p class="links">
       <a href="mailto:vramaprasad@ucsd.edu">Email</a>
       <span>·</span>
