--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <span>·</span>
       <a href="https://github.com/varun-ramaprasad">GitHub</a>
       <span>·</span>
-      <a href="assets/Resume.pdf">Resume (PDF)</a>
+      <a href="assets/Varun_Ramaprasad_long_resume.pdf">Resume (PDF)</a>
     </p>
   </header>
 
